[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obscurate-client"
version = "0.1.0"
description = "Privacy-First Python SDK for AI Agents - Dark Pool capabilities with automatic x402 payments"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Obscurate", email = "dev@obscurate.xyz" }
]
keywords = [
    "privacy",
    "x402",
    "payments",
    "zero-knowledge",
    "ai-agents",
    "dark-pool",
    "blockchain",
    "ucp",
    "machine-to-machine",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "respx>=0.21.0",  # httpx mocking
]

[project.urls]
Homepage = "https://obscurate.xyz"
Documentation = "https://docs.obscurate.xyz"
Repository = "https://github.com/Obscuratexyz/obscurate-client"
Issues = "https://github.com/Obscuratexyz/obscurate-client/issues"
Changelog = "https://github.com/Obscuratexyz/obscurate-client/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["obscurate_client"]

[tool.hatch.build.targets.sdist]
include = [
    "/obscurate_client",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
]

# =============================================================================
# RUFF (Linting & Formatting)
# =============================================================================

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",    # line too long
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "RUF022",  # unsorted __all__
    "TC003",   # move import to type-checking block (false positive for runtime types)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["obscurate_client"]

# =============================================================================
# MYPY (Type Checking)
# =============================================================================

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

# =============================================================================
# PYTEST
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["obscurate_client"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
